@@ -1,5 +1,15 @@
 2003-11-23  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* hash.c: Convert to ISO-C.
+	* hash.h: Likewise.
+	* input-file.c: Likewise.
+	* input-file.h: Likewise.
+	* input-scrub.c: Likewise.
+	* itbl-ops.c: Likewise.
+	* itbl-ops.h: Likewise.
+
+2003-11-23  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* config/tc-h8300.c (Hmode): Make it global.
 	(Smode): Likewise.
 	(Nmode): Likewise.
